Internationalization added for backend

--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -9,11 +9,11 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">Jewlers <sup>2</sup></div>
+            <div class="sidebar-brand-text mx-3">Jewlers <sup>1</sup></div>
         </a>
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="/home">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
         </li>
@@ -22,21 +22,21 @@
         <hr class="sidebar-divider">
 
         <!-- Heading -->
-        <div class="sidebar-heading">
-            Interface
-        </div>
+        <!-- <div class="sidebar-heading">
+            Customer
+        </div> -->
 
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                <i class="fas fa-fw fa-cog"></i>
-                <span>Components</span>
+                <i class="fas fa-fw fa-user-friends"></i>
+                <span>Customer</span>
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Components:</h6>
-                    <a class="collapse-item" href="buttons.html">Buttons</a>
-                    <a class="collapse-item" href="cards.html">Cards</a>
+                    <h6 class="collapse-header">Pages:</h6>
+                    <a class="collapse-item" routerLink="/home/add-customer"><i class="fas fa-fw fa-user-plus"></i>Add</a>
+                    <a class="collapse-item" routerLink="/home/update-customer"><i class="fas fa-fw fa-user-edit"></i>Update</a>
                 </div>
             </div>
         </li>
@@ -239,10 +239,7 @@
 
             <!-- Begin Page Content -->
             <div class="container-fluid">
-
-                <!-- Page Heading -->
-                <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
-
+                <router-outlet></router-outlet>
             </div>
             <!-- /.container-fluid -->
 
