--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div>
     <router-outlet></router-outlet>
 </div>
+<!-- <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen]="true">
+</ngx-spinner> -->
