--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~bootstrap/dist/css/bootstrap.min.css';
 @import './assets/css/sb-admin-2.css';
