--- a/ui/src/app/components/views/customer-add/customer-add.component.html
+++ b/ui/src/app/components/views/customer-add/customer-add.component.html
@@ -1,1 +1,123 @@
-<p>customer-add works!</p>
+<div>
+  <form [formGroup]="customerForm" (ngSubmit)="onFormSubmit()">
+    <div class="form-group row">
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <label for="customerName">Customer Name</label>
+        <input
+          type="text"
+          formControlName="customerName"
+          class="form-control form-control-user"
+          id="customerName"
+          placeholder="Customer Name"
+        />
+      </div>
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <label for="phoneNumber">Phone Number </label>
+        <input
+          type="text"
+          formControlName="phoneNumber"
+          class="form-control form-control-user"
+          id="phoneNumber"
+          placeholder="Customer Phone Number"
+        />
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputAddress">Address</label>
+      <input
+        type="text"
+        class="form-control form-control-user"
+        formControlName="inputAddress"
+        id="inputAddress"
+        placeholder="1234 Main St"
+      />
+    </div>
+    <div class="form-group">
+      <label for="inputAddress2">Address 2</label>
+      <input
+        type="text"
+        class="form-control"
+        id="inputAddress2"
+        formControlName="inputAddress2"
+        placeholder="Apartment, studio, or floor"
+      />
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-4">
+        <label for="inputCountry">Country</label>
+        <select
+          formControlName="countryFormName"
+          [(ngModel)]="selectedCountry"
+          (change)="onCountrySelection(selectedCountry)"
+          class="form-control"
+        >
+          <option [ngValue]="null" selected>Choose...</option>
+          <option *ngFor="let country of countries" [ngValue]="country">
+            {{ country.countryName }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputState">State</label>
+        <select
+          id="inputState"
+          class="form-control"
+          formControlName="stateFormName"
+          [(ngModel)]="selectedState"
+          (change)="onStateSelection(selectedState)"
+        >
+          <option [ngValue]="null" selected>Choose...</option>
+          <option *ngFor="let state of states" [ngValue]="state">
+            {{ state.stateName }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputDistrict">City/District</label>
+        <select
+          id="inputDistrict"
+          class="form-control"
+          formControlName="districtFormName"
+          [(ngModel)]="selectedDistrict"
+          (change)="onDistrictSelection(selectedDistrict)"
+        >
+          <option [ngValue]="null" selected>Choose...</option>
+          <option *ngFor="let district of districts" [ngValue]="district">
+            {{ district.districtName }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group col-md-4">
+        <label for="subDistrict">Sub District/Area</label>
+        <select
+          id="subDistrict"
+          class="form-control"
+          formControlName="subDistirctFormName"
+          [(ngModel)]="selectedSubDistrict"
+        >
+          <option [ngValue]="null" selected>Choose...</option>
+          <option
+            *ngFor="let subDistrict of subDistricts"
+            [ngValue]="subDistrict"
+          >
+            {{ subDistrict.subDistrictName }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group col-md-2">
+        <label for="pincode">Zip</label>
+        <input
+          type="text"
+          class="form-control"
+          id="pincode"
+          formControlName="pincode"
+        />
+      </div>
+      <button type="submit" class="btn btn-primary btn-user btn-block">
+        Add
+      </button>
+    </div>
+  </form>
+</div>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }">
+</ngx-loading>
