Added scheme backend changes

--- a/ui/src/app/components/views/customer-add/customer-add.component.html
+++ b/ui/src/app/components/views/customer-add/customer-add.component.html
@@ -22,6 +22,28 @@
         />
       </div>
     </div>
+    <div class="form-group row">
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <label for="phoneNumber">Alternate Phone Number </label>
+        <input
+          type="text"
+          formControlName="altPhoneNumber"
+          class="form-control form-control-user"
+          id="altPhoneNumber"
+          placeholder="Alternate Phone Number"
+        />
+      </div>
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <label for="referralCode">Referral Code </label>
+        <input
+          type="text"
+          formControlName="referralCode"
+          class="form-control form-control-user"
+          id="referralCode"
+          placeholder="Referral Code"
+        />
+      </div>
+    </div>
     <div class="form-group">
       <label for="inputAddress">Address</label>
       <input
