--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -58,6 +58,9 @@
           <a class="collapse-item" routerLink="/home/update-customer"
             ><i class="fas fa-fw fa-user-edit"></i>Update</a
           >
+          <a class="collapse-item" routerLink="/home/list-customer"
+            ><i class="fas fa-fw fa-user-friends"></i>View</a
+          >
         </div>
       </div>
     </li>
