--- a/ui/src/app/components/helper/modal/modal.component.html
+++ b/ui/src/app/components/helper/modal/modal.component.html
@@ -1,12 +1,19 @@
 <!-- The Modal -->
 <div class="modal-header">
-    <h4 class="modal-title pull-left">{{title}}</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+  <h4 class="modal-title pull-left">{{ title }}</h4>
+  <button
+    type="button"
+    class="close pull-right"
+    aria-label="Close"
+    (click)="bsModalRef.hide()"
+  >
     <span aria-hidden="true">×</span>
   </button>
 </div>
 <div class="modal-body pt-1">
-    <html>{{message}}
-
-    </html>
+  <html>
+    {{
+      message
+    }}
+  </html>
 </div>
