customer update changes

--- a/ui/src/app/components/views/customer-add/customer-add.component.html
+++ b/ui/src/app/components/views/customer-add/customer-add.component.html
@@ -135,6 +135,15 @@
           formControlName="pincode"
         />
       </div>
+      <div class="form-group col-md-3">
+        <label for="locality">Locality</label>
+        <input
+          type="text"
+          class="form-control"
+          id="locality"
+          formControlName="locality"
+        />
+      </div>
       <button type="submit" class="btn btn-primary btn-user btn-block">
         Add
       </button>
