--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -61,6 +61,40 @@
           <a class="collapse-item" routerLink="/home/list-customer"
             ><i class="fas fa-fw fa-user-friends"></i>View</a
           >
+          <a class="collapse-item" routerLink="/home/customer-scheme"
+            ><i class="fas fa-fw fa-poll"></i>Scheme</a
+          >
+        </div>
+      </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block" />
+
+    <!-- Nav Item - Pages Collapse Menu -->
+    <li class="nav-item">
+      <a
+        class="nav-link collapsed"
+        href="#"
+        data-toggle="collapse"
+        data-target="#collapseThree"
+        aria-expanded="true"
+        aria-controls="collapseThree"
+      >
+        <i class="fas fa-fw fa-rupee-sign"></i>
+        <span>Transactions</span>
+      </a>
+      <div
+        id="collapseThree"
+        class="collapse"
+        aria-labelledby="headingTwo"
+        data-parent="#accordionSidebar"
+      >
+        <div class="bg-white py-2 collapse-inner rounded">
+          <h6 class="collapse-header">Pages:</h6>
+          <a class="collapse-item" routerLink="/Sales"
+            ><i class="fas fa-fw fa-share-square"></i>Sales</a
+          >
         </div>
       </div>
     </li>
