--- a/ui/src/app/components/views/login/login.component.html
+++ b/ui/src/app/components/views/login/login.component.html
@@ -78,4 +78,6 @@
       </div>
     </div>
   </div>
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }">
+  </ngx-loading>
 </div>
