--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -55,9 +55,6 @@
           <a class="collapse-item" routerLink="/home/add-customer"
             ><i class="fas fa-fw fa-user-plus"></i>Add</a
           >
-          <a class="collapse-item" routerLink="/home/update-customer"
-            ><i class="fas fa-fw fa-user-edit"></i>Update</a
-          >
           <a class="collapse-item" routerLink="/home/list-customer"
             ><i class="fas fa-fw fa-user-friends"></i>View</a
           >
@@ -92,7 +89,7 @@
       >
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Pages:</h6>
-          <a class="collapse-item" routerLink="/Sales"
+          <a class="collapse-item" routerLink="/home/tx-sales"
             ><i class="fas fa-fw fa-share-square"></i>Sales</a
           >
         </div>
@@ -115,7 +112,7 @@
     <div id="content">
       <!-- Topbar -->
       <nav
-        class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
+        class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow"
       >
         <!-- Sidebar Toggle (Topbar) -->
         <button
@@ -124,26 +121,6 @@
         >
           <i class="fa fa-bars"></i>
         </button>
-
-        <!-- Topbar Search -->
-        <form
-          class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-        >
-          <div class="input-group">
-            <input
-              type="text"
-              class="form-control bg-light border-0 small"
-              placeholder="Search for..."
-              aria-label="Search"
-              aria-describedby="basic-addon2"
-            />
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="button">
-                <i class="fas fa-search fa-sm"></i>
-              </button>
-            </div>
-          </div>
-        </form>
 
         <!-- Topbar Navbar -->
         <ul class="navbar-nav ml-auto">
