--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -112,7 +112,7 @@
     <div id="content">
       <!-- Topbar -->
       <nav
-        class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow"
+        class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
       >
         <!-- Sidebar Toggle (Topbar) -->
         <button
