--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -1,15 +1,9 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
   <!-- Sidebar -->
-  <ul
-    class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
-    id="accordionSidebar"
-  >
+  <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
-    <a
-      class="sidebar-brand d-flex align-items-center justify-content-center"
-      href="#"
-    >
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
       <div class="sidebar-brand-icon rotate-n-15">
         <i class="fas fa-laugh-wink"></i>
       </div>
@@ -19,8 +13,7 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/home">
         <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Dashboard</span></a
-      >
+        <span>Dashboard</span></a>
     </li>
 
     <!-- Divider -->
@@ -33,34 +26,16 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
-      <a
-        class="nav-link collapsed"
-        href="#"
-        data-toggle="collapse"
-        data-target="#collapseTwo"
-        aria-expanded="true"
-        aria-controls="collapseTwo"
-      >
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+        aria-controls="collapseTwo">
         <i class="fas fa-fw fa-user-friends"></i>
         <span>Customer</span>
       </a>
-      <div
-        id="collapseTwo"
-        class="collapse"
-        aria-labelledby="headingTwo"
-        data-parent="#accordionSidebar"
-      >
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Pages:</h6>
-          <a class="collapse-item" routerLink="/home/add-customer"
-            ><i class="fas fa-fw fa-user-plus"></i>Add</a
-          >
-          <a class="collapse-item" routerLink="/home/list-customer"
-            ><i class="fas fa-fw fa-user-friends"></i>View</a
-          >
-          <a class="collapse-item" routerLink="/home/customer-scheme"
-            ><i class="fas fa-fw fa-poll"></i>Scheme</a
-          >
+          <a class="collapse-item" routerLink="/home/add-customer"><i class="fas fa-fw fa-user-plus"></i>Add</a>
+          <a class="collapse-item" routerLink="/home/list-customer"><i class="fas fa-fw fa-user-friends"></i>View</a>
         </div>
       </div>
     </li>
@@ -70,28 +45,51 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
-      <a
-        class="nav-link collapsed"
-        href="#"
-        data-toggle="collapse"
-        data-target="#collapseThree"
-        aria-expanded="true"
-        aria-controls="collapseThree"
-      >
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true"
+        aria-controls="collapseThree">
         <i class="fas fa-fw fa-rupee-sign"></i>
         <span>Transactions</span>
       </a>
-      <div
-        id="collapseThree"
-        class="collapse"
-        aria-labelledby="headingTwo"
-        data-parent="#accordionSidebar"
-      >
+      <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Pages:</h6>
-          <a class="collapse-item" routerLink="/home/tx-sales"
-            ><i class="fas fa-fw fa-share-square"></i>Sales</a
-          >
+          <a class="collapse-item" routerLink="/home/tx-sales"><i class="fas fa-fw fa-share-square"></i>Sales</a>
+        </div>
+      </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block" />
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOffer" aria-expanded="true"
+        aria-controls="collapseOffer">
+        <i class="fas fa-fw fa-box-open"></i>
+        <span>Offers</span>
+      </a>
+      <div id="collapseOffer" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <h6 class="collapse-header">Pages:</h6>
+          <a class="collapse-item" routerLink="/home/offers-add"><i class="fas fa-fw fa-cart-plus"></i>Add</a>
+          <a class="collapse-item" routerLink="/home/offers-view"><i class="fas fa-fw fa-shopping-cart"></i>View</a>
+        </div>
+      </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block" />
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseScheme" aria-expanded="true"
+        aria-controls="collapseScheme">
+        <i class="fas fa-fw fa-box-open"></i>
+        <span>Scheme</span>
+      </a>
+      <div id="collapseScheme" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <h6 class="collapse-header">Pages:</h6>
+          <a class="collapse-item" routerLink="/home/scheme-add"><i class="fas fa-fw fa-cart-plus"></i>Add</a>
+          <a class="collapse-item" routerLink="/home/scheme-view"><i class="fas fa-fw fa-edit"></i>View</a>
         </div>
       </div>
     </li>
@@ -111,14 +109,9 @@
     <!-- Main Content -->
     <div id="content">
       <!-- Topbar -->
-      <nav
-        class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow"
-      >
+      <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
         <!-- Sidebar Toggle (Topbar) -->
-        <button
-          id="sidebarToggleTop"
-          class="btn btn-link d-md-none rounded-circle mr-3"
-        >
+        <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
           <i class="fa fa-bars"></i>
         </button>
 
@@ -126,31 +119,17 @@
         <ul class="navbar-nav ml-auto">
           <!-- Nav Item - Search Dropdown (Visible Only XS) -->
           <li class="nav-item dropdown no-arrow d-sm-none">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="searchDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               <i class="fas fa-search fa-fw"></i>
             </a>
             <!-- Dropdown - Messages -->
-            <div
-              class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-              aria-labelledby="searchDropdown"
-            >
+            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
+              aria-labelledby="searchDropdown">
               <form class="form-inline mr-auto w-100 navbar-search">
                 <div class="input-group">
-                  <input
-                    type="text"
-                    class="form-control bg-light border-0 small"
-                    placeholder="Search for..."
-                    aria-label="Search"
-                    aria-describedby="basic-addon2"
-                  />
+                  <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                    aria-label="Search" aria-describedby="basic-addon2" />
                   <div class="input-group-append">
                     <button class="btn btn-primary" type="button">
                       <i class="fas fa-search fa-sm"></i>
@@ -163,24 +142,15 @@
 
           <!-- Nav Item - Alerts -->
           <li class="nav-item dropdown no-arrow mx-1">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="alertsDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               <i class="fas fa-bell fa-fw"></i>
               <!-- Counter - Alerts -->
               <span class="badge badge-danger badge-counter">3+</span>
             </a>
             <!-- Dropdown - Alerts -->
-            <div
-              class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-              aria-labelledby="alertsDropdown"
-            >
+            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+              aria-labelledby="alertsDropdown">
               <h6 class="dropdown-header">Alerts Center</h6>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="mr-3">
@@ -190,9 +160,7 @@
                 </div>
                 <div>
                   <div class="small text-gray-500">December 12, 2019</div>
-                  <span class="font-weight-bold"
-                    >A new monthly report is ready to download!</span
-                  >
+                  <span class="font-weight-bold">A new monthly report is ready to download!</span>
                 </div>
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
@@ -218,40 +186,25 @@
                   account.
                 </div>
               </a>
-              <a class="dropdown-item text-center small text-gray-500" href="#"
-                >Show All Alerts</a
-              >
+              <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
             </div>
           </li>
 
           <!-- Nav Item - Messages -->
           <li class="nav-item dropdown no-arrow mx-1">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="messagesDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               <i class="fas fa-envelope fa-fw"></i>
               <!-- Counter - Messages -->
               <span class="badge badge-danger badge-counter">7</span>
             </a>
             <!-- Dropdown - Messages -->
-            <div
-              class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-              aria-labelledby="messagesDropdown"
-            >
+            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+              aria-labelledby="messagesDropdown">
               <h6 class="dropdown-header">Message Center</h6>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="./assets/img/undraw_profile_1.svg"
-                    alt="..."
-                  />
+                  <img class="rounded-circle" src="./assets/img/undraw_profile_1.svg" alt="..." />
                   <div class="status-indicator bg-success"></div>
                 </div>
                 <div class="font-weight-bold">
@@ -264,11 +217,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="./assets/img/undraw_profile_2.svg"
-                    alt="..."
-                  />
+                  <img class="rounded-circle" src="./assets/img/undraw_profile_2.svg" alt="..." />
                   <div class="status-indicator"></div>
                 </div>
                 <div>
@@ -281,11 +230,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="./assets/img/undraw_profile_3.svg"
-                    alt="..."
-                  />
+                  <img class="rounded-circle" src="./assets/img/undraw_profile_3.svg" alt="..." />
                   <div class="status-indicator bg-warning"></div>
                 </div>
                 <div>
@@ -298,11 +243,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img
-                    class="rounded-circle"
-                    src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                    alt="..."
-                  />
+                  <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="..." />
                   <div class="status-indicator bg-success"></div>
                 </div>
                 <div>
@@ -314,9 +255,7 @@
                   <div class="small text-gray-500">Chicken the Dog · 2w</div>
                 </div>
               </a>
-              <a class="dropdown-item text-center small text-gray-500" href="#"
-                >Read More Messages</a
-              >
+              <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
             </div>
           </li>
 
@@ -324,28 +263,13 @@
 
           <!-- Nav Item - User Information -->
           <li class="nav-item dropdown no-arrow">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="userDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-                >{{ user.firstName }} {{ user.lastName }}</span
-              >
-              <img
-                class="img-profile rounded-circle"
-                src="./assets/img/undraw_profile.svg"
-              />
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user.firstName }} {{ user.lastName }}</span>
+              <img class="img-profile rounded-circle" src="./assets/img/undraw_profile.svg" />
             </a>
             <!-- Dropdown - User Information -->
-            <div
-              class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-              aria-labelledby="userDropdown"
-            >
+            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
               <a class="dropdown-item" href="#">
                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                 Profile
@@ -359,15 +283,8 @@
                 Activity Log
               </a>
               <div class="dropdown-divider"></div>
-              <a
-                class="dropdown-item"
-                routerLink="/login"
-                data-toggle="modal"
-                data-target="#logoutModal"
-              >
-                <i
-                  class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"
-                ></i>
+              <a class="dropdown-item" routerLink="/login" data-toggle="modal" data-target="#logoutModal">
+                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                 Logout
               </a>
             </div>
@@ -404,24 +321,13 @@
 </a>
 
 <!-- Logout Modal-->
-<div
-  class="modal fade"
-  id="logoutModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button
-          class="close"
-          type="button"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
