--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -2,3 +2,7 @@
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import './assets/css/sb-admin-2.css';
+
+.table-nostriped tbody tr:nth-of-type(odd) {
+  background-color:transparent;
+}
