--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -36,6 +36,7 @@
           <h6 class="collapse-header">Pages:</h6>
           <a class="collapse-item" routerLink="/home/add-customer"><i class="fas fa-fw fa-user-plus"></i>Add</a>
           <a class="collapse-item" routerLink="/home/list-customer"><i class="fas fa-fw fa-user-friends"></i>View</a>
+          <a class="collapse-item" routerLink="/home/customer-scheme/add"><i class="fas fa-fw fa-award"></i>Scheme</a>
         </div>
       </div>
     </li>
