--- a/ui/src/app/components/views/tx-sales/tx-sales.component.html
+++ b/ui/src/app/components/views/tx-sales/tx-sales.component.html
@@ -24,6 +24,7 @@
       <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="phoneSearch">Search User</label>
         <button
+          type="button"
           class="form-control form-control-user btn-primary"
           (click)="getCustomerBsdOnPhoneNumber()"
         >
@@ -91,7 +92,8 @@
           formControlName="uom"
           [(ngModel)]="selectedUOM"
         >
-          <option [ngValue]="uom" [selected]>{{ uom.desc }}</option>
+          <option [ngValue]="null" disabled>Choose...</option>
+          <option [ngValue]="uom" [selected]="uom">{{uom.desc}}</option>
         </select>
       </div>
     </div>
@@ -129,6 +131,28 @@
         />
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="total">Wastage Charges</label>
+        <input
+          type="text"
+          formControlName="wastageCharges"
+          class="form-control form-control-user"
+          id="wastageCharges"
+          placeholder="Wastage Charges"
+        />
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="total">Making Charges</label>
+        <input
+          type="text"
+          formControlName="makingCharges"
+          class="form-control form-control-user"
+          id="makingCharges"
+          placeholder="Making Charges"
+        />
+      </div>
+      <div class="col-sm-3 mb-3 mb-sm-0">
         <label for="total">Sales Value</label>
         <input
           type="text"
@@ -141,6 +165,78 @@
     </div>
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
+</div>
+<br />
+<!-- Customer Schemes -->
+<div class="form-group row" *ngIf="this.customerSchemes.length > 0">
+  <table class="table table-striped">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th>Scheme Name</th>
+        <th>Desc</th>
+        <th>Duration</th>
+        <th>Offers</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container
+        *ngFor="let customerScheme of this.customerSchemes; let i = index"
+      >
+        <tr>
+          <td>{{ i + 1 }}</td>
+          <td>{{ customerScheme.scheme.scheme_name }}</td>
+          <td>{{ customerScheme.scheme.scheme_desc }}</td>
+          <td>{{ customerScheme.scheme.duration }}</td>
+          <td>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-toggle="collapse"
+              [attr.data-target]="'#demo1' + i"
+            >
+              View
+            </button>
+          </td>
+          <td><button type="button" class="btn btn-primary" (click)="selectedScheme(customerScheme)">Select</button></td>
+        </tr>
+        <tr>
+          <ng-container *ngIf="customerScheme.scheme.offers.length > 0">
+            <td colspan="12" class="accordian-body collapse" [id]="'demo1' + i">
+              <table
+                class="table table-nostriped thead-dark table-bordered table-hover"
+              >
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Offer Desc</th>
+                    <th>Offer Code</th>
+                    <th>Applicable On</th>
+                    <th>Expression</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr
+                    *ngFor="
+                      let offer of customerScheme.scheme.offers;
+                      let j = index
+                    "
+                  >
+                    <td>{{ j + 1 }}</td>
+                    <td>{{ offer.desc }}</td>
+                    <td>{{ offer.offerCode }}</td>
+                    <td>{{ offer.applicableOn }}</td>
+                    <td>{{ offer.expression }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+          </ng-container>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
 </div>
 <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }">
 </ngx-loading>
