--- a/ui/src/app/components/views/tx-sales/tx-sales.component.html
+++ b/ui/src/app/components/views/tx-sales/tx-sales.component.html
@@ -138,6 +138,7 @@
           class="form-control form-control-user"
           id="wastageCharges"
           placeholder="Wastage Charges"
+          (focusout)="updateSalesValue()"
         />
       </div>
     </div>
@@ -150,6 +151,7 @@
           class="form-control form-control-user"
           id="makingCharges"
           placeholder="Making Charges"
+          (focusout)="updateSalesValue()"
         />
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
