--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -117,6 +117,25 @@
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block" />
 
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAddress" aria-expanded="true"
+        aria-controls="collapseAddress">
+        <i class="fas fa-fw fa-address-book"></i>
+        <span>Address</span>
+      </a>
+      <div id="collapseAddress" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <h6 class="collapse-header">Pages:</h6>
+          <a class="collapse-item" routerLink="/home/state-save"><i class="fas fa-fw fa-address-book"></i>State</a>
+          <a class="collapse-item" routerLink="/home/scheme-add"><i class="fas fa-fw fa-address-book"></i>District</a>
+          <a class="collapse-item" routerLink="/home/scheme-add"><i class="fas fa-fw fa-address-book"></i>SubDistrict</a>
+        </div>
+      </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block" />
+
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
       <button class="rounded-circle border-0" id="sidebarToggle"></button>
