SubDistrict adding completed

--- a/ui/src/app/components/views/address/sub-district-save/sub-district-save.component.html
+++ b/ui/src/app/components/views/address/sub-district-save/sub-district-save.component.html
@@ -1,1 +1,60 @@
-<p>sub-district-save works!</p>
+<div>
+  <form [formGroup]="subDistrictForm" (ngSubmit)="onFormSubmit()">
+    <div class="form-group row">
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="country">Country</label>
+        <select
+          formControlName="country"
+          class="form-control"
+          [(ngModel)]="selectedCountry"
+          (change)="onCountrySelection(selectedCountry)"
+        >
+          <option [ngValue]="null" selected disabled>Choose...</option>
+          <option *ngFor="let country of countries" [ngValue]="country">
+            {{ country.countryName }}
+          </option>
+        </select>
+      </div>
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="state">State</label>
+        <select
+          formControlName="state"
+          class="form-control"
+          [(ngModel)]="selectedSate"
+          (change)="onStateSelection(selectedSate)"
+        >
+          <option [ngValue]="null" selected disabled>Choose...</option>
+          <option *ngFor="let state of states" [ngValue]="state">
+            {{ state.stateName }}
+          </option>
+        </select>
+      </div>
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="district">District/City</label>
+        <select
+          formControlName="district"
+          class="form-control"
+        >
+          <option [ngValue]="null" selected disabled>Choose...</option>
+          <option *ngFor="let district of districts" [ngValue]="district">
+            {{ district.districtName }}
+          </option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <label for="subDistrictName">SubDistrict Name</label>
+        <input type="text" formControlName="subDistrictName" class="form-control form-control-user" id="subDistrictName"
+          placeholder="SubDistrict Name" />
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <button type="submit" class="btn btn-success btn-user btn-block">
+          Add
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
