--- a/ui/src/app/components/views/home/home.component.html
+++ b/ui/src/app/components/views/home/home.component.html
@@ -127,8 +127,8 @@
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Pages:</h6>
           <a class="collapse-item" routerLink="/home/state-save"><i class="fas fa-fw fa-address-book"></i>State</a>
-          <a class="collapse-item" routerLink="/home/scheme-add"><i class="fas fa-fw fa-address-book"></i>District</a>
-          <a class="collapse-item" routerLink="/home/scheme-add"><i class="fas fa-fw fa-address-book"></i>SubDistrict</a>
+          <a class="collapse-item" routerLink="/home/district-save"><i class="fas fa-fw fa-address-book"></i>District</a>
+          <a class="collapse-item" routerLink="/home/sub-district-save"><i class="fas fa-fw fa-address-book"></i>SubDistrict</a>
         </div>
       </div>
     </li>
