Fixed user registration

--- a/ui/src/app/components/views/customer/customer-add/customer-add.component.html
+++ b/ui/src/app/components/views/customer/customer-add/customer-add.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup]="customerForm" (ngSubmit)="onFormSubmit()">
+  <form [formGroup]="customerForm" (ngSubmit)="onFormSubmit()" autocomplete="off" >
     <div class="form-group row">
       <div class="col-sm-6 mb-3 mb-sm-0">
         <label for="customerName">Customer Name</label>
