Added angular reactive form validation for login and signup

--- a/ui/src/app/components/views/signup/signup.component.html
+++ b/ui/src/app/components/views/signup/signup.component.html
@@ -1,58 +1,80 @@
 <div class="container">
-    <div class="card o-hidden border-0 shadow-lg my-5">
-        <div class="card-body p-0">
-            <!-- Nested Row within Card Body -->
-            <div class="row">
-                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                <div class="col-lg-7">
-                    <div class="p-5">
-                        <div class="text-center">
-                            <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-                        </div>
-                        <form class="user" [formGroup]="signupForm" (ngSubmit)="onFormSubmit()">
-                            <div class="form-group row ">
-                                <div class="col-sm-6 mb-3 mb-sm-0 ">
-                                    <input type="text" formControlName="firstName" class="form-control form-control-user " id="firstName " placeholder="First Name ">
-                                </div>
-                                <div class="col-sm-6">
-                                    <input type="text" formControlName="lastName" class="form-control form-control-user" id="lastName" placeholder="Last Name">
-                                </div>
-                            </div>
-                            <div class="form-group ">
-                                <input type="email" formControlName="username" class="form-control form-control-user" id="username" placeholder="Email Address">
-                            </div>
-                            <div class="form-group row ">
-                                <div class="col-sm-6 mb-3 mb-sm-0 ">
-                                    <input type="password" formControlName="password" class="form-control form-control-user " id="password" placeholder="Password ">
-                                </div>
-                                <div class="col-sm-6 ">
-                                    <input type="password" formControlName="repassword" class="form-control form-control-user " id="repassword" placeholder="Repeat Password ">
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-user btn-block ">
+  <div class="card o-hidden border-0 shadow-lg my-5">
+    <div class="card-body p-0">
+      <!-- Nested Row within Card Body -->
+      <div class="row">
+        <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+        <div class="col-lg-7">
+          <div class="p-5">
+            <div class="text-center">
+              <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+            </div>
+            <form class="user" [formGroup]="signupForm" (ngSubmit)="onFormSubmit()">
+              <div class="form-group row ">
+                <div class="col-sm-6 mb-3 mb-sm-0 ">
+                  <input type="text" formControlName="firstName" 
+                    [ngClass]="{ 'is-invalid': f['firstName'].errors?.['invalid'] && f['firstName'].touched && f['firstName'].dirty}"
+                    class="form-control form-control-user " id="firstName"
+                    placeholder="First Name ">
+                    <small class="text-danger" *ngIf="f['firstName'].errors?.['required'] && f['firstName'].touched">FirstName is mandatory</small>
+                </div>
+                <div class="col-sm-6">
+                  <input type="text" formControlName="lastName" class="form-control form-control-user" id="lastName"
+                    placeholder="Last Name">
+                </div>
+              </div>
+              <div class="form-group ">
+                <input type="email" formControlName="username"
+                  [ngClass]="{ 'is-invalid': f['username'].errors?.['invalid'] && f['username'].touched && f['username'].dirty}"
+                  class="form-control form-control-user" id="username" placeholder="Email Address">
+                <!-- user name validation error messages-->
+                <small class="text-danger" *ngIf="f['username'].errors?.['required'] && f['username'].touched">Email
+                  ID
+                  mandatory</small>
+                <small class="text-danger" *ngIf="f['username'].errors?.['email'] && f['username'].touched">Email
+                  ID
+                  Invalid</small>
+              </div>
+              <div class="form-group row ">
+                <div class="col-sm-6 mb-3 mb-sm-0 ">
+                  <input type="password" formControlName="password"
+                    [ngClass]="{ 'is-invalid': f['password'].errors?.['invalid'] && f['password'].touched && f['password'].dirty}"
+                    class="form-control form-control-user " id="password" placeholder="Password ">
+                  <small class="text-danger"
+                    *ngIf="f['password']?.hasError('required') && f['password'].touched && f['password'].dirty">Password
+                    is mandatory</small>
+                </div>
+                <div class="col-sm-6 ">
+                  <input type="password" [class.is-invalid]="signupForm.errors?.['mismatch']"
+                    formControlName="repassword" class="form-control form-control-user " id="repassword"
+                    placeholder="Repeat Password ">
+                  <small class="text-danger" *ngIf="signupForm.errors?.['mismatch']">Passwords not matching</small>
+                </div>
+              </div>
+              <button [disabled]="signupForm.invalid" type="submit" class="btn btn-primary btn-user btn-block ">
                 Register Account
               </button>
-                            <hr>
-                            <a href="# " class="btn btn-google btn-user btn-block ">
-                                <i class="fab fa-google fa-fw "></i> Register with Google
-                            </a>
-                            <a href="# " class="btn btn-facebook btn-user btn-block ">
-                                <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                            </a>
-                        </form>
-                        <hr>
-                        <div class="text-center ">
-                            <a class="small" routerLink="/forget-password">Forgot Password?</a>
-                        </div>
-                        <div class="text-center ">
-                            <a class="small" routerLink="/login">Already have an account? Login!</a>
-                        </div>
-                    </div>
-                </div>
+              <hr>
+              <a href="# " class="btn btn-google btn-user btn-block ">
+                <i class="fab fa-google fa-fw "></i> Register with Google
+              </a>
+              <a href="# " class="btn btn-facebook btn-user btn-block ">
+                <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
+              </a>
+            </form>
+            <hr>
+            <div class="text-center ">
+              <a class="small" routerLink="/forget-password">Forgot Password?</a>
             </div>
+            <div class="text-center ">
+              <a class="small" routerLink="/login">Already have an account? Login!</a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-    <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }">
-    </ngx-loading>
+  </div>
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }">
+  </ngx-loading>
 
 </div>
