--- a/ui/src/app/components/views/login/login.component.html
+++ b/ui/src/app/components/views/login/login.component.html
@@ -12,46 +12,36 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
-                <form
-                  class="user"
-                  [formGroup]="loginform"
-                  (ngSubmit)="onSubmit()"
-                >
+                <form class="user" [formGroup]="loginform" (ngSubmit)="onSubmit()">
                   <div class="form-group">
-                    <input
-                      type="email"
-                      class="form-control form-control-user"
-                      formControlName="username"
-                      id=" username "
-                      aria-describedby=" emailHelp "
-                      placeholder=" Enter Email Address... "
-                    />
+                    <input type="email"
+                      [ngClass]="{ 'is-invalid': f['username'].errors?.['invalid'] && f['username'].touched && f['username'].dirty}"
+                      class="form-control form-control-user" formControlName="username" id="username" name="username"
+                      aria-describedby=" emailHelp " placeholder=" Enter Email Address... " />
+                    <!-- user name validation error messages-->
+                    <small class="text-danger" *ngIf="f['username'].errors?.['required'] && f['username'].touched">Email
+                      ID
+                      mandatory</small>
+                    <small class="text-danger" *ngIf="f['username'].errors?.['email'] && f['username'].touched">Email
+                      ID
+                      Invalid</small>
                   </div>
                   <div class="form-group">
-                    <input
-                      type="password"
-                      class="form-control form-control-user"
-                      formControlName="password"
-                      id=" password "
-                      placeholder=" Password "
-                    />
+                    <input type="password" [ngClass]="{ 'is-invalid': f['password'].errors?.['password'] && f['password'].touched &&
+                      f['password'].dirty}" class="form-control form-control-user" formControlName="password"
+                      id="password" placeholder="Password " />
+                    <small class="text-danger"
+                      *ngIf="f['password']?.hasError('required') && f['password'].touched && f['password'].dirty">Password
+                      is
+                      mandatory</small>
                   </div>
                   <div class="form-group">
                     <div class="custom-control custom-checkbox small">
-                      <input
-                        type=" checkbox "
-                        class="custom-control-input"
-                        id=" customCheck "
-                      />
-                      <label class="custom-control-label" for=" customCheck "
-                        >Remember Me</label
-                      >
+                      <input type=" checkbox " class="custom-control-input" id=" customCheck " />
+                      <label class="custom-control-label" for=" customCheck ">Remember Me</label>
                     </div>
                   </div>
-                  <button
-                    type="submit"
-                    class="btn btn-primary btn-user btn-block"
-                  >
+                  <button type="submit" class="btn btn-primary btn-user btn-block" [disabled]="loginform.invalid">
                     Login
                   </button>
                   <hr />
@@ -65,8 +55,7 @@
                 <hr />
                 <div class="text-center">
                   <a class="small" routerLink="/forget-password">
-                    Forgot Password?</a
-                  >
+                    Forgot Password?</a>
                 </div>
                 <div class="text-center">
                   <a class="small" routerLink="/signup">Create an Account!</a>
