--- a/ui/src/app/components/views/tx-sales/tx-sales.component.html
+++ b/ui/src/app/components/views/tx-sales/tx-sales.component.html
@@ -9,6 +9,7 @@
           class="form-control form-control-user"
           id="customerName"
           placeholder="Customer Name"
+          [disabled]="true"
         />
       </div>
       <div class="col-sm-3 mb-3 mb-sm-0">
